project mpv structure

--- a/frontend/public/assets/index.css
+++ b/frontend/public/assets/index.css
@@ -21,15 +21,13 @@ body {
   justify-content: space-between;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
 }
-
 .slots .reel {
   border: 2px solid black;
   border-radius: 2%;
   width: 79px;
   height: 237px;
-  /* background-image: url('https://assets.codepen.io/439000/slotreel.webp'); */
-  background-image: url("/images/rool.jpg");
-  /* Cambia 'tu_imagen.webp' por el nombre de tu imagen */
+  /*  background-image: url('https://assets.codepen.io/439000/slotreel.webp'); */
+  background-image: url("/images/rool.jpg"); /* Cambia 'tu_imagen.webp' por el nombre de tu imagen */
 }
 
 @media (max-width: 600px) {
@@ -38,33 +36,28 @@ body {
     height: 237px;
     padding: 23.7px;
   }
-
   .slots .reel {
     width: 79px;
     height: 237px;
   }
 }
-
 @media (min-width: 601px) and (max-width: 1023px) {
   .slots {
     width: 276.5px;
     height: 237px;
     padding: 19.75px;
   }
-
   .slots .reel {
     width: 79px;
     height: 237px;
   }
 }
-
 @media (min-width: 1024px) {
   .slots {
     width: 276.5px;
     height: 237px;
     padding: 19.75px;
   }
-
   .slots .reel {
     width: 79px;
     height: 237px;
