--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,7 +18,10 @@ body {
 }
 
 .domain-salta {
-    background: radial-gradient(circle, #9127CB, #3B0247);
+    /* background: radial-gradient(circle, #9127CB, #3B0247); */
+/*     margin: 0;
+    min-height: 100vh; */
+    background: radial-gradient(circle at center, #9127CB 10%, #3B0247 100%);
 }
 
 /* zarate se mantiene igual que pilar */
@@ -145,3 +148,31 @@ body {
 
 /* ESTILOS PARA SALTA */
 /* TEXTOS */
+
+
+/* ANIMACION PARA SALTA EN EL LOGO QUE GIRE 360° */
+@keyframes spinOnce {
+    0% {
+        transform: rotateY(0deg);
+        opacity: 1;
+    }
+
+    80% {
+        transform: rotateY(864deg);
+        /* 80% del tiempo para el primer giro */
+        opacity: 0;
+    }
+
+    100% {
+        transform: rotateY(1080deg);
+        /* 3 giros completos */
+        opacity: 1;
+    }
+}
+
+.animate-spin-once {
+    animation: spinOnce 1.5s linear 2.5s forwards;
+    /* 2s duración + 1s retraso */
+    transform-origin: center;
+    /* Centro de la imagen */
+}
