--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,7 +21,7 @@ body {
     /* background: radial-gradient(circle, #9127CB, #3B0247); */
     /*     margin: 0;
     min-height: 100vh; */
-    background: radial-gradient(circle at center, #9127CB 10%, #3B0247 100%);
+    background: radial-gradient(circle at center, #8C25C3 10%, #3A024A    100%);
 }
 
 /* zarate se mantiene igual que pilar */
